[package]
name = "openblas-src"
version = "0.5.4"
license = "Apache-2.0/MIT"
authors = [
    "Corey Richardson <corey@octayn.net>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Steve Harris <steveOfAR@gmail.com>",
]
description = "The package provides BLAS and LAPACK using the OpenBLAS implementation."
homepage = "https://github.com/cmr/openblas-src"
repository = "https://github.com/cmr/openblas-src"
readme = "README.md"
categories = ["science"]
keywords = ["linear-algebra"]
build = "build.rs"
links = "openblas"
exclude = [
    "source/benchmark/*",
    "source/ctest/*",
    "source/lapack-netlib/BLAS/TESTING/*",
    "source/lapack-netlib/CBLAS/testing/*",
    "source/lapack-netlib/TESTING/*.in",
    "source/lapack-netlib/TESTING/EIG/*",
    "source/lapack-netlib/TESTING/LIN/*",
    "source/reference/*",
    "source/test/*",
    "source/utest/*",
]

[features]
default = ["cblas", "lapacke"]

cblas = []
lapacke = []
static = []
system = []
