[package]
name = "openblas-src"
version = "0.9.0"
license = "Apache-2.0/MIT"
authors = [
    "Corey Richardson <corey@octayn.net>",
    "Ethan Smith <ethan@ethanhs.me>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Jim Turner <git@turner.link>",
    "Ken Elkabany <ken@elkabany.com>",
    "Steve Harris <steveOfAR@gmail.com>",
    "Toshiki Teramura <toshiki.teramura@gmail.com>",
]
description = "The package provides a source of BLAS and LAPACK via OpenBLAS."
documentation = "https://docs.rs/openblas-src"
homepage = "https://github.com/blas-lapack-rs/openblas-src"
repository = "https://github.com/blas-lapack-rs/openblas-src"
readme = "README.md"
categories = ["science"]
keywords = ["linear-algebra"]
build = "build.rs"
links = "openblas"
exclude = [
    "source/benchmark/*",
    "source/ctest/*",
    "source/lapack-netlib/BLAS/TESTING/*",
    "source/lapack-netlib/CBLAS/testing/*",
    "source/lapack-netlib/TESTING/*.in",
    "source/lapack-netlib/TESTING/EIG/*",
    "source/lapack-netlib/TESTING/LIN/*",
    "source/reference/*",
    "source/test/*",
    "source/utest/*",
]

[features]
default = ["cblas", "lapacke"]

cache = []
cblas = []
lapacke = []
static = []
system = []

[dev-dependencies]
libc = "0.2"

[target.'cfg(target_os="windows")'.build-dependencies]
vcpkg = "0.2"
