[package]
name = "openblas-build"
version = "0.10.9"
license = "Apache-2.0/MIT"
edition = "2018"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
description = "The package provides a build helper for OpenBLAS."
documentation = "https://docs.rs/openblas-build"
homepage = "https://github.com/blas-lapack-rs/openblas-src"
repository = "https://github.com/blas-lapack-rs/openblas-src"
readme = "../README.md"
exclude = ["test_build/"]

[dependencies]
anyhow = "1.0.79"
flate2 = "1.0.28"
tar = "0.4.40"
thiserror = "1.0.56"
ureq = { version = "2.9.1", default-features = false, features = [
    "native-certs",
    "native-tls",
    "gzip",
] }
native-tls = { version = "0.2.11" }
walkdir = "2.4.0"
