[package]
name = "openblas-src"
version = "0.10.11"
license = "Apache-2.0/MIT"
edition = "2018"
authors = [
    "Corey Richardson <corey@octayn.net>",
    "Ethan Smith <ethan@ethanhs.me>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Jim Turner <git@turner.link>",
    "Ken Elkabany <ken@elkabany.com>",
    "Mitsutoshi Aoe <me@maoe.name>",
    "Steve Harris <steveOfAR@gmail.com>",
    "Toshiki Teramura <toshiki.teramura@gmail.com>",
]
description = "The package provides a source of BLAS and LAPACK via OpenBLAS."
documentation = "https://docs.rs/openblas-src"
homepage = "https://github.com/blas-lapack-rs/openblas-src"
repository = "https://github.com/blas-lapack-rs/openblas-src"
readme = "../README.md"
categories = ["science"]
keywords = ["linear-algebra"]
build = "build.rs"
links = "openblas"
rust-version = "1.71.1"

[features]
default = ["cblas", "lapacke"]

cache = []
cblas = []
lapacke = []
static = []
system = []

[dev-dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3.30"
dirs = "5.0.1"
openblas-build = { version = "0.10.10", path = "../openblas-build" }

[target.'cfg(target_os="windows")'.build-dependencies]
vcpkg = "0.2"
